--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.1.0",
+    "@react-native-picker/picker": "^2.7.7",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
